--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
         <meta name="theme-color" content="#000000" />
         <meta name="description" content="NBA web page" />
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-        <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+        <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
         <title>React NBA</title>
     </head>
     <body>
